# ecs-duckdb-iceberg

./: .gitignore  CMakeLists.txt  Makefile  README_YURI_DEMO.md  extension_config.cmake  vcpkg.json
.github/workflows/: CloudTesting.yml  CodeQuality.yml  HighPriorityIssues.yml  LakekeeperTesting.yml  LocalTesting.yml  MainDistributionPipeline.yml  PolarisTesting.yml  Rest.yml
data/bad_data/: bad_iceberg_metadata.json
data/column_mapping/: catalog.sqlite
data/fruit/data/: .00000-0-d55bca04-5d59-4b68-a3a4-33a7bcf6898b-0-00001.parquet.crc  .00000-2-dc313a93-20ea-4632-8a07-49e46b4afe29-0-00001.parquet.crc  .00001-1-d55bca04-5d59-4b68-a3a4-33a7bcf6898b-0-00001.parquet.crc  00000-0-d55bca04-5d59-4b68-a3a4-33a7bcf6898b-0-00001.parquet  00000-2-dc313a93-20ea-4632-8a07-49e46b4afe29-0-00001.parquet  00001-1-d55bca04-5d59-4b68-a3a4-33a7bcf6898b-0-00001.parquet
data/fruit/metadata/: .037a9f15-fd4c-4950-80a9-fd6b257fc886-m0.avro.crc  .89c7144f-8535-4e3c-bddf-7745b6e24ecd-m0.avro.crc  .snap-3790395430840981108-1-89c7144f-8535-4e3c-bddf-7745b6e24ecd.avro.crc  .snap-7992439894843196740-1-037a9f15-fd4c-4950-80a9-fd6b257fc886.avro.crc  (+10 more)
scripts/: api.yaml  blah.sh  create_s3_insert_table.py  docker-compose.yml  format.py  generate_cpp_code.py  generate_response_objects_v2.py  generate_response_objects_v4.py  parse_openapi_spec.py  provision-works-with-deleting.py  provision.py  provision_2_produces_deletes.py  provision_with_updates.py  read_inserted_data.py  relativize_iceberg_table.py  requirements-polaris.txt  requirements.txt  start-rest-catalog.sh  upload_iceberg_to_s3_test_server.sh
scripts/data_generators/: DataGenerationBase.py  README.md  generate_base_parquet.py  generate_data.py  generate_iceberg.py  provision_with_updates.py
scripts/lakekeeper/: setup_lakekeeper_catalog.py  setup_polaris_catalog.py
scripts/persistent/: add_columns_with_defaults.py  add_columns_with_defaults_in_struct.py  case_sensitive_names.py  column_mapping.py  hive_partitioned_table.py  lineitem_iceberg.py  partition_bigint.py  partition_binary.py  partition_bool.py  partition_decimal_bigint.py  partition_decimal_hugeint.py  partition_decimal_integer.py  partition_decimal_smallint.py  partition_double.py  partition_fixed_length_binary.py  partition_float.py  partition_integer.py  partition_time.py  partition_timestamp.py  partition_timestamp_ns.py  partition_timestamp_year.py  partition_timestamptz.py
scripts/polaris/: create_data.py  get_polaris_client_creds.py  get_polaris_root_creds.py  setup_polaris_catalog.py  setup_polaris_catalog.sh
scripts/test_data_generator/: generate_base_parquet_irc.py  provision_with_updates.py
src/: avro_scan.cpp  aws.cpp  base_manifest_reader.cpp  catalog_api.cpp  catalog_utils.cpp  curl.cpp  iceberg_copy.cpp  iceberg_extension.cpp  iceberg_functions.cpp  iceberg_logging.cpp  iceberg_manifest.cpp  iceberg_manifest_list.cpp  iceberg_predicate.cpp  iceberg_snapshot_lookup.cpp  iceberg_transform.cpp  iceberg_value.cpp  manifest_cache.cpp  manifest_file_reader.cpp  manifest_list_reader.cpp  manifest_reader.cpp  uc_api.cpp  uc_utils.cpp
src/common/: api_utils.cpp  iceberg.cpp  request_utils.cpp  schema.cpp  url_utils.cpp  utils.cpp
src/deletes/: deletion_vector.cpp  equality_delete.cpp  positional_delete.cpp
src/iceberg_functions/: iceberg_avro_multi_file_reader.cpp  iceberg_metadata.cpp  iceberg_multi_file_list.cpp  iceberg_multi_file_reader.cpp  iceberg_scan.cpp  iceberg_snapshots.cpp  iceberg_to_ducklake.cpp
src/include/: api_utils.hpp  avro_scan.hpp  aws.hpp  catalog_api.hpp  catalog_utils.hpp  curl.hpp  iceberg_avro_multi_file_reader.hpp  iceberg_copy.hpp  iceberg_extension.hpp  iceberg_functions.hpp  iceberg_logging.hpp  iceberg_manifest.hpp  iceberg_metadata.hpp  iceberg_multi_file_list.hpp  iceberg_multi_file_reader.hpp  iceberg_options.hpp  iceberg_predicate.hpp  iceberg_predicate_stats.hpp  iceberg_transform.hpp  iceberg_types.hpp  iceberg_utils.hpp  iceberg_value.hpp  manifest_cache.hpp  manifest_reader.hpp  request_utils.hpp  uc_api.hpp  url_utils.hpp
src/metadata/: iceberg_column_definition.cpp  iceberg_field_mapping.cpp  iceberg_partition_spec.cpp  iceberg_snapshot.cpp  iceberg_table_metadata.cpp  iceberg_table_schema.cpp  iceberg_transform.cpp
src/rest_catalog/objects/: CMakeLists.txt  add_encryption_key_update.cpp  add_partition_spec_update.cpp  add_schema_update.cpp  add_snapshot_update.cpp  add_sort_order_update.cpp  add_view_version_update.cpp  and_or_expression.cpp  assert_create.cpp  assert_current_schema_id.cpp  assert_default_sort_order_id.cpp  assert_default_spec_id.cpp  assert_last_assigned_field_id.cpp  assert_last_assigned_partition_id.cpp  assert_ref_snapshot_id.cpp  assert_table_uuid.cpp  assert_view_uuid.cpp  assign_uuidupdate.cpp  async_planning_result.cpp  base_update.cpp  binary_type_value.cpp  blob_metadata.cpp  boolean_type_value.cpp  catalog_config.cpp  commit_report.cpp  commit_table_request.cpp  commit_table_response.cpp  commit_transaction_request.cpp  commit_view_request.cpp  completed_planning_result.cpp  completed_planning_with_idresult.cpp  content_file.cpp  count_map.cpp  counter_result.cpp  create_namespace_request.cpp  create_namespace_response.cpp  create_table_request.cpp  create_view_request.cpp  data_file.cpp  date_type_value.cpp  (+121 more)
src/storage/: ic_catalog.cpp  ic_catalog_set.cpp  ic_clear_cache.cpp  ic_schema_entry.cpp  ic_schema_set.cpp  ic_table_entry.cpp  ic_table_set.cpp  ic_transaction.cpp  ic_transaction_manager.cpp  iceberg_insert.cpp  iceberg_transaction_data.cpp  icr_catalog.cpp  irc_authorization.cpp  irc_catalog.cpp  irc_catalog_set.cpp  irc_clear_cache.cpp  irc_schema_entry.cpp  irc_schema_set.cpp  irc_table_entry.cpp  irc_table_set.cpp  irc_transaction.cpp  irc_transaction_manager.cpp  uc_catalog.cpp  uc_clear_cache.cpp  uc_schema_entry.cpp  uc_schema_set.cpp  uc_table_entry.cpp  uc_table_set.cpp
test/python/: test_pyiceberg_read.py  test_spark_read.py
test/sql/: iceberg_catalog_read.test  iceberg_metadata.test  iceberg_snapshots.test
vcpkg_ports/avro-c/: duckdb.patch  portfile.cmake
(+1004 files in other folders)
