add_library(
  rest_catalog_objects OBJECT
  error_model.cpp
  catalog_config.cpp
  create_namespace_request.cpp
  update_namespace_properties_request.cpp
  rename_table_request.cpp
  namespace.cpp
  page_token.cpp
  table_identifier.cpp
  primitive_type.cpp
  struct_field.cpp
  struct_type.cpp
  list_type.cpp
  map_type.cpp
  type.cpp
  schema.cpp
  expression.cpp
  expression_type.cpp
  true_expression.cpp
  false_expression.cpp
  and_or_expression.cpp
  not_expression.cpp
  unary_expression.cpp
  literal_expression.cpp
  set_expression.cpp
  term.cpp
  reference.cpp
  transform_term.cpp
  transform.cpp
  partition_field.cpp
  partition_spec.cpp
  sort_direction.cpp
  null_order.cpp
  sort_field.cpp
  sort_order.cpp
  snapshot.cpp
  snapshot_reference.cpp
  snapshot_references.cpp
  snapshot_log.cpp
  metadata_log.cpp
  table_metadata.cpp
  sqlview_representation.cpp
  view_representation.cpp
  view_history_entry.cpp
  view_version.cpp
  view_metadata.cpp
  base_update.cpp
  assign_uuidupdate.cpp
  upgrade_format_version_update.cpp
  add_schema_update.cpp
  set_current_schema_update.cpp
  add_partition_spec_update.cpp
  set_default_spec_update.cpp
  add_sort_order_update.cpp
  set_default_sort_order_update.cpp
  add_snapshot_update.cpp
  set_snapshot_ref_update.cpp
  remove_snapshots_update.cpp
  remove_snapshot_ref_update.cpp
  set_location_update.cpp
  set_properties_update.cpp
  remove_properties_update.cpp
  add_view_version_update.cpp
  set_current_view_version_update.cpp
  set_statistics_update.cpp
  remove_statistics_update.cpp
  set_partition_statistics_update.cpp
  remove_partition_statistics_update.cpp
  remove_partition_specs_update.cpp
  remove_schemas_update.cpp
  enable_row_lineage_update.cpp
  table_update.cpp
  view_update.cpp
  table_requirement.cpp
  assert_create.cpp
  assert_table_uuid.cpp
  assert_ref_snapshot_id.cpp
  assert_last_assigned_field_id.cpp
  assert_current_schema_id.cpp
  assert_last_assigned_partition_id.cpp
  assert_default_spec_id.cpp
  assert_default_sort_order_id.cpp
  view_requirement.cpp
  assert_view_uuid.cpp
  storage_credential.cpp
  load_credentials_response.cpp
  load_table_result.cpp
  scan_tasks.cpp
  completed_planning_result.cpp
  completed_planning_with_idresult.cpp
  failed_planning_result.cpp
  async_planning_result.cpp
  empty_planning_result.cpp
  plan_status.cpp
  fetch_planning_result.cpp
  plan_table_scan_result.cpp
  fetch_scan_tasks_result.cpp
  commit_table_request.cpp
  commit_view_request.cpp
  commit_transaction_request.cpp
  create_table_request.cpp
  register_table_request.cpp
  create_view_request.cpp
  load_view_result.cpp
  token_type.cpp
  oauth_client_credentials_request.cpp
  oauth_token_exchange_request.cpp
  oauth_token_request.cpp
  counter_result.cpp
  timer_result.cpp
  metric_result.cpp
  metrics.cpp
  report_metrics_request.cpp
  scan_report.cpp
  commit_report.cpp
  oauth_error.cpp
  oauth_token_response.cpp
  iceberg_error_response.cpp
  create_namespace_response.cpp
  get_namespace_response.cpp
  list_tables_response.cpp
  list_namespaces_response.cpp
  update_namespace_properties_response.cpp
  commit_table_response.cpp
  statistics_file.cpp
  blob_metadata.cpp
  partition_statistics_file.cpp
  boolean_type_value.cpp
  integer_type_value.cpp
  long_type_value.cpp
  float_type_value.cpp
  double_type_value.cpp
  decimal_type_value.cpp
  string_type_value.cpp
  uuidtype_value.cpp
  date_type_value.cpp
  time_type_value.cpp
  timestamp_type_value.cpp
  timestamp_tz_type_value.cpp
  timestamp_nano_type_value.cpp
  timestamp_tz_nano_type_value.cpp
  fixed_type_value.cpp
  binary_type_value.cpp
  count_map.cpp
  value_map.cpp
  primitive_type_value.cpp
  file_format.cpp
  content_file.cpp
  data_file.cpp
  delete_file.cpp
  position_delete_file.cpp
  equality_delete_file.cpp
  plan_table_scan_request.cpp
  field_name.cpp
  fetch_scan_tasks_request.cpp
  plan_task.cpp
  file_scan_task.cpp)

set(ALL_OBJECT_FILES
    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:rest_catalog_objects>
    PARENT_SCOPE)
